--- a/bcc0603/src/main/resources/templates/quienes-somosView.html
+++ b/bcc0603/src/main/resources/templates/quienes-somosView.html
@@ -12,13 +12,13 @@
     <div class="nav-expand-lg" id="menu">
         <ul class="nav nav-tabs">
             <li class="nav-item">
+                <a class="nav-link"  th:href="@{/producto/list}"><strong>Inicio</strong></a>
+            </li>
+            <li class="nav-item">
                 <a class="nav-link" th:href="@{/contacta}"><strong>Contacta</strong></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link"  th:href="@{/index}"><strong>Inicio</strong></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link"  th:href="@{/producto}"><strong>Producto</strong></a>
+                <a class="nav-link"  th:href="@{/producto/list}"><strong>Productos</strong></a>
             </li>
         </ul>
     </div>
