--- a/bcc0603/src/main/resources/templates/indexUserView.html
+++ b/bcc0603/src/main/resources/templates/indexUserView.html
@@ -18,7 +18,7 @@
                 <a class="nav-link"  th:href="@{/quienessomos}"><strong>Quienes somos</strong></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link"  th:href="@{/producto}"><strong>Producto</strong></a>
+                <a class="nav-link"  th:href="@{/producto/list}"><strong>Productos</strong></a>
             </li>
         </ul>
     </div>
