--- a/bcc0605/src/main/resources/templates/producto/editProducto.html
+++ b/bcc0605/src/main/resources/templates/producto/editProducto.html
@@ -31,14 +31,14 @@
 </div>
 
 <h1>Editar Producto</h1>
-<form method="post" action="#" th:action="@{/producto/editar/{id}/submit(id=${productForm.id})}"  th:object="${productForm}">
+<form method="post" action="#" th:action="@{/producto/editar/submit}" th:object="${productForm}">
     <label>Id: <input type="text" id="id" th:field="*{id}" readonly /> </label><br/>
     <label>Nombre: <input type="text" id="nombre" th:field="*{nombre}" /></label><br/>
     <label>En Oferta:<input type="checkbox" id="enOferta" th:field="*{enOferta}" ></label><br/>
     Tipo de Iva:<br/>
     <div th:each="tipoIva : ${T(com.example.app.entity.TipoIva).values()}">
         <input type="radio" name="button1" th:value="${tipoIva}" th:text="${tipoIva}"
-               th:field="*{TipoIva}" />
+               th:field="*{tipoIva}" />
     </div>
     <label>Precio: <input type="text" id="precio" th:field="*{precio}" /></label><br/>
     <label>Categoria
