--- a/bcc0606/src/main/resources/templates/cuenta/editCuenta.html
+++ b/bcc0606/src/main/resources/templates/cuenta/editCuenta.html
@@ -5,19 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <link  rel="stylesheet" th:href="@{/css/tabla.css}"/>
 </head>
 <body>
 <h1>Editar Cuenta</h1>
-<form method="post" action="#" th:action="@{/cuenta/editar/{IBAN}/submit(id=${cuentaForm.IBAN})}" th:object="${cuentaForm}">
-    <label>IBAN: <input type="text" id="IBAN" th:field="*{IBAN}"/> </label><br/>
+<form method="post" action="#" th:action="@{/cuenta/editar/{IBAN}/submit(IBAN=${cuentaForm.IBAN})}"  th:object="${cuentaForm}">
+    <label>IBAN: <input type="text" id="IBAN" th:field="*{IBAN}" readonly/> </label><br/>
     <label>Alias: <input type="text" id="alias" th:field="*{alias}" /></label><br/>
-    <label>Saldo: <input type="text" id="saldo" th:field="*{saldo}" readonly /></label><br/>
+    <label>Saldo: <input type="text" id="saldo" th:field="*{saldo}" readonly/></label><br/>
     <input type="submit" value="Enviar"/>
 </form>
 <a th:href="@{/index}">Inicio</a><br/>
 <a th:href="@{/cuenta/nuevo}">Nueva Cuenta</a><br/>
-<a th:href="@{/movimiento/nuevo/{IBAN}}">Nuevo Movimiento</a><br/>
 </body>
 </html>
 
