--- a/bcc0606/src/main/resources/templates/cuenta/newCuentaForm.html
+++ b/bcc0606/src/main/resources/templates/cuenta/newCuentaForm.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <link  rel="stylesheet" th:href="@{/css/tabla.css}"/>
 </head>
 <body>
 <div class="container">
@@ -21,12 +20,10 @@
     </div>
     <div class="mb-3">
         <label>Saldo:</label><br/>
-        <input type="text" id="saldo" th:field="*{saldo}" />
+        <input type="text" id="saldo" th:field="*{saldo}" placeholder="0" readonly/>
     </div>
     <input type="submit" value="Enviar"/>
 </form>
-
-
 <a th:href="@{/index}">Volver al inicio</a><br/>
 </div>
 </body>
