--- a/bcc0606/src/main/resources/templates/indexView.html
+++ b/bcc0606/src/main/resources/templates/indexView.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>main</title>
-
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
 <body style="border-left: 50px;">
@@ -15,7 +14,7 @@
                 <a class="nav-link"  th:href="@{/index}"><strong>Inicio</strong></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" th:href="@{/cuenta}"><strong>Cuenta</strong></a>
+                <a class="nav-link" th:href="@{/cuenta}"><strong>Listado Cuentas</strong></a>
             </li>
         </ul>
     </div>
