--- a/bcc0700/src/main/resources/templates/editFormView.html
+++ b/bcc0700/src/main/resources/templates/editFormView.html
@@ -8,9 +8,9 @@
     <style>.cssError { background-color:red; } </style>
 </head>
 <body>
-<h1>Nuevo empleado</h1>
+<h1>Editar empleado</h1>
 <form method="post" action="#" th:action="@{/editar/{id}/submit(id=${empleadoForm.id})}" th:object="${empleadoForm}">
-    <label>Id: <input type="text" readonly id="id" th:field="*{id}" /> </label><br/>
+    <label>Id: <input type="text" readonly id="id" th:field="*{id}"/> </label><br/>
     <label>Nombre: <input type="text" id="nombre" th:field="*{nombre}" /></label><br/>
     <div th:classappend="${#fields.hasErrors('email')} ? 'cssError'">
         <label>Email:<input type="text" id="email" th:field="*{email}"/>
@@ -25,6 +25,13 @@
         <input type="radio" name="button1" th:value="${gen}" th:text="${gen}"
                th:field="*{genero}" />
     </div>
+    Departamento:<br/>
+    <select name="list1" th:field="*{departamento}">
+        <option value="0">select option</option> <!--opcion por defecto-->
+        <option th:each="dep:${listaDepartamentos}"
+                th:value="${dep.id}" th:text="${dep.nombre}">
+        </option>
+    </select>
    <!--<label>Añade Fotografía del Empleado:<input type="file" name="imagen"/></label><br/>-->
     <input type="submit" value="Enviar"/>
 </form>
