--- a/bcc0703/src/main/resources/templates/empleado/editFormView.html
+++ b/bcc0703/src/main/resources/templates/empleado/editFormView.html
@@ -31,9 +31,16 @@
         <option th:each="departamento:${listaDepartamentos}"
                 th:value="${departamento.id}" th:text="${departamento.nombre}">
         </option>
-    </select>
+    </select><br/>
+    Categorías:<br/>
+    <select name="list2" th:field="*{categoria}">
+        <option value="0">select option</option> <!--opcion por defecto-->
+        <option th:each="categoria:${listaCategorias}"
+                th:value="${categoria.id}" th:text="${categoria.nombre}">
+        </option>
+    </select><br/>
     <input type="submit" value="Enviar"/>
 </form>
-<a th:href="@{/static}">Inicio</a><br/>
+<a th:href="@{/}">Inicio</a><br/>
 </body>
 </html>
