--- a/bcc0703/src/main/resources/templates/empleado/newFormView.html
+++ b/bcc0703/src/main/resources/templates/empleado/newFormView.html
@@ -30,7 +30,14 @@
         <option th:each="departamento:${listaDepartamentos}"
                 th:value="${departamento.id}" th:text="${departamento.nombre}">
         </option>
-    </select>
+    </select><br/>
+    Categoria:<br/>
+    <select name="list2" th:field="*{categoria}">
+        <option value="0">select option</option> <!--opcion por defecto-->
+        <option th:each="categoria:${listaCategorias}"
+                th:value="${categoria.id}" th:text="${categoria.nombre}">
+        </option>
+    </select><br/>
     <input type="submit" value="Enviar"/>
 </form>
 <a th:href="@{/static}">Inicio</a><br/>
