--- a/bcc0707/src/main/resources/templates/listView.html
+++ b/bcc0707/src/main/resources/templates/listView.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Empleado CRUD</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
 <h1>Listado de empleados</h1>
-<table>
+<table class="table table-striped">
     <thead><th>ID</th><th>Nombre</th><th>Email</th><th>Salario</th></thead>
     <tbody><tr th:each="empleado : ${listaEmpleados}">
         <td th:text="${empleado.id}">Id</td>
@@ -22,5 +23,7 @@
 <a th:href="@{/listaEmpleados/(pag=${pagAnterior})}">Pág ant</a>&nbsp;|&nbsp;
 <a th:href="@{/listaEmpleados/(pag=${pagSiguiente})}">Pág sig</a>&nbsp;|&nbsp;
 <a th:href="@{/listaEmpleados/(pag=${pagFinal})}">Utl.pág</a>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
 </body>
 </html>
