--- a/bcc0709/src/main/resources/templates/categoria/newCategoriaForm.html
+++ b/bcc0709/src/main/resources/templates/categoria/newCategoriaForm.html
@@ -8,35 +8,17 @@
     <link  rel="stylesheet" th:href="@{/css/tabla.css}"/>
 </head>
 <body>
-<div id="principal" class="col-sm-12" style="background-color:#F4FBEB;margin-right-color:#F4FBEB">
-    <div class="nav-expand-lg" id="menu">
-        <ul class="nav nav-tabs">
-            <li class="nav-item">
-                <a class="nav-link"  th:href="@{/producto/list}"><strong>Inicio</strong></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" th:href="@{/contacta}"><strong>Contacta</strong></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link"  th:href="@{/quienessomos}"><strong>Quienes somos</strong></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link"  th:href="@{/producto/list}"><strong>Productos</strong></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link"  th:href="@{/categoria/}"><strong>Categoria</strong></a>
-            </li>
-        </ul>
-    </div>
-</div>
 
 <h1>Nueva Categoría</h1>
 <form method="post" action="#" th:action="@{/categoria/new/submit}" th:object="${categoriaForm}">
-    <label>Id: <input type="text" id="id" th:field="*{id}" /> </label><br/>
+    <label>Id: <input type="text" id="id" th:field="*{id}"/> </label><br/>
     <label>Nombre: <input type="text" id="nombre" th:field="*{nombre}" /></label><br/>
-    <input type="submit" value="Enviar"/>
+    <input type="submit" value="Crear Nueva Categoría"/>
 </form>
 <a th:href="@{/producto/}">Inicio</a><br/>
+<a th:href="@{/producto/new}">Nuevo producto</a><br/>
+<a th:href="@{/categoria/list}">Lista categorías</a><br/>
+<a th:href="@{/categoria/new}">Nueva categoría</a><br/>
 </body>
 </html>
 
