--- a/bcc0709/src/main/resources/templates/producto/newProductoForm.html
+++ b/bcc0709/src/main/resources/templates/producto/newProductoForm.html
@@ -8,28 +8,9 @@
     <link  rel="stylesheet" th:href="@{/css/tabla.css}"/>
 </head>
 <body>
-<div id="principal" class="col-sm-12" style="background-color:#F4FBEB;margin-right-color:#F4FBEB">
-    <div class="nav-expand-lg" id="menu">
-        <ul class="nav nav-tabs">
-            <li class="nav-item">
-                <a class="nav-link"  th:href="@{/producto/list}"><strong>Inicio</strong></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" th:href="@{/contacta}"><strong>Contacta</strong></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link"  th:href="@{/quienessomos}"><strong>Quienes somos</strong></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link"  th:href="@{/producto/list}"><strong>Productos</strong></a>
-            </li>
-        </ul>
-    </div>
-</div>
-
 <h1>Nuevo Producto</h1>
 <form method="post" action="#" th:action="@{/producto/new/submit}" th:object="${productForm}">
-    <label>Id: <input type="text" id="id" th:field="*{id}" /> </label><br/>
+    <label>ID: <input type="text" id="id" th:field="*{id}"/></label><br/>
     <label>Nombre: <input type="text" id="nombre" th:field="*{nombre}" /></label><br/>
     <label>En Oferta:<input type="checkbox" id="enOferta" th:field="*{enOferta}" ></label><br/>
     Tipo de Iva:<br/>
@@ -39,16 +20,18 @@
     </div>
     <label>Precio: <input type="text" id="precio" th:field="*{precio}" /></label><br/>
     <label>Categoria
-        <select name="categoria" th:field="*{idCategoria}">
+        <select name="categoria" th:field="*{categoria}">
             <option th:each="cat : ${listaCategorias}"
                     th:value="${cat.id}" th:text="${cat.nombre}">
             </option>
         </select>
     </label><br/>
-    <input type="submit" value="Enviar"/>
+    <input type="submit" value="Crear Nuevo Producto"/>
 </form>
 
 <a th:href="@{/producto/}">Inicio</a><br/>
+<a th:href="@{/categoria/list}">Lista categorías</a><br/>
+<a th:href="@{/categoria/new}">Nueva categoría</a><br/>
 
 </body>
 </html>
