Creado todo el programa. Todas las vistas UsuarioValoracion y ProductoValoracion. También los servicios, controladores, repositorios, etc. Ahora hay que comprobar que todo funcione correctamente y poner las vistas bonitas.

--- a/bcc0710/src/main/resources/templates/producto/newProductoForm.html
+++ b/bcc0710/src/main/resources/templates/producto/newProductoForm.html
@@ -30,7 +30,9 @@
 </form>
 
 <a th:href="@{/producto/}">Inicio</a><br/>
-<a th:href="@{/categoria/list}">Lista categorías</a><br/>
+<a th:href="@{/usuario/list}">Lista de Usuarios</a><br/>
+<a th:href="@{/usuario/new}">Nuevo usuario</a><br/>
+<a th:href="@{/categoria/list}">Lista de Categorías</a><br/>
 <a th:href="@{/categoria/new}">Nueva categoría</a><br/>
 
 </body>
