--- a/bcc0710/src/main/resources/templates/usuario/usuarioView.html
+++ b/bcc0710/src/main/resources/templates/usuario/usuarioView.html
@@ -30,8 +30,9 @@
     </tbody>
 </table>
 <a th:href="@{/producto/}">Inicio Listado Productos</a><br/>
-<a th:href="@{/categoria/new}">Nueva categoría</a><br/>
 <a th:href="@{/producto/new}">Nuevo producto</a><br/>
 <a th:href="@{/usuario/new}">Nuevo usuario</a><br/>
+<a th:href="@{/categoria/list}">Lista de Categorías</a><br/>
+<a th:href="@{/categoria/new}">Nueva categoría</a><br/>
 </body>
 </html>
