--- a/bcc0710/src/main/resources/templates/categoria/categoriaView.html
+++ b/bcc0710/src/main/resources/templates/categoria/categoriaView.html
@@ -28,7 +28,9 @@
     </tbody>
 </table>
 <a th:href="@{/producto/}">Inicio Listado Productos</a><br/>
-<a th:href="@{/categoria/new}">Nueva categoría</a><br/>
 <a th:href="@{/producto/new}">Nuevo producto</a><br/>
+<a th:href="@{/usuario/list}">Lista de Usuarios</a><br/>
+<a th:href="@{/usuario/new}">Nuevo usuario</a><br/>
+<a th:href="@{/categoria/new}">Nueva categoría</a><br/>
 </body>
 </html>
