--- a/bcc0710/src/main/resources/templates/producto/productoView.html
+++ b/bcc0710/src/main/resources/templates/producto/productoView.html
@@ -8,15 +8,16 @@
     <link  rel="stylesheet" th:href="@{/css/tabla.css}"/>
 </head>
 <body>
-
+<div class="text-center">
 <h1>Listado de productos de la empresa</h1>
-<h2>Categoría: <span th:text="${categoriaSeleccionada}">default</span></h2>
+<h2>Categoría seleccionada: <span th:text="${categoriaSeleccionada.nombre}">default</span></h2>
 <select id="select" size="3" onChange="changeCategory();">
     <option value="">Todas</option>
     <option th:each="cat : ${listaCategorias}"
             th:value="${cat.id}" th:text="${cat.nombre}">
     </option>
 </select>
+</div>
 <table>
     <thead>
     <tr>
@@ -26,6 +27,7 @@
         <th>Tipo de Iva</th>
         <th>Precio</th>
         <th>Categoría</th>
+        <th>Valoraciones</th>
         <th>Editar</th>
         <th>Borrar</th>
     </thead>
@@ -37,6 +39,7 @@
         <td th:text="${producto.tipoIva}">0</td>
         <td th:text="${producto.precio}">0</td>
         <td th:text="${producto.categoria.nombre}">0</td>
+        <td><a th:href="@{/prodVal/prod/{id}(id=${producto.id})}">Valoraciones Producto</a></td>
         <td><a th:href="@{/producto/editar/{id}(id=${producto.id})}">Editar Producto</a></td>
         <td><a th:href="@{/producto/borrar/{id}(id=${producto.id})}">Borrar Producto</a></td>
     </tr>
@@ -44,7 +47,9 @@
 </table>
 <a th:href="@{/producto/}">Inicio</a><br/>
 <a th:href="@{/producto/new}">Nuevo producto</a><br/>
-<a th:href="@{/categoria/list}">Lista categorías</a><br/>
+<a th:href="@{/usuario/list}">Lista de Usuarios</a><br/>
+<a th:href="@{/usuario/new}">Nuevo usuario</a><br/>
+<a th:href="@{/categoria/list}">Lista de Categorías</a><br/>
 <a th:href="@{/categoria/new}">Nueva categoría</a><br/>
 <script>
     function changeCategory(){
